
 2.2...:
 =======

 2007-10-14: message("Using 'setGraphEdges' for your model class.")
             removed

 2007-10-14: debug.update = FALSE in "dg.control"

 2007-10-12: 'if (any(slotNames(object) == ".title"))' in "drawResult"
             then this title is used as label of the graph window

 2007-10-12: MoveEdgeLabel relative current position

 2007-10-12: moveCanves added for "<B2-Motion>" ("<B1-Motion>" would be perfered)

 2007-10-10: "subDropVertex" and "subAddVertex":
                no setVisibleVertices(visible.Vertices) if (slave || redraw)

 2007-10-10: "subDropVertex" and "subAddVertex":
                no 'tkdelete' and 'tkinsert' if (slave || redraw)

 2007-10-09: 'frameViews = dm.frameViews' removed from call of 'drawModel'
             in 'drawResult'.

 2007-10-04: ',)' changed to ')' in UserMenu of demo.

 2007-10-04: 'N' changed to 'control$N' in 'sphereRand'.

 2007-10-04: 'edgeNodes <- edgeItem(f, edge.type = edgeNode$type)' in
             "subSetEdgeCoords"

 2007-10-04: 'edgeClass = NULL' changed to
             'edgeClass = control$edgeClasses[, 1][[1]]' in "newEdge"

 2007-10-04: 'edgeClass = edgeClass))' changed to
             'edgeClass = NULL))' for 
             'tkadd(edgesMenu, "command", 
              label = paste("'addEdge', selected vertices and edges"), '


 2.0...:
 =======

 2005-09-25: Class of "oriented" in "dg.simple.graph" changed
	     from "logical" to "vector" (to permit "list()" for "giRaph").

 2005-09-25: "Demo" moved til "old.demos" in "inst"
             (for name not conflicting with "demo" under windows).

 2005-09-25: Test for "panedwindow" present in "Tcl/tk"
             (for test on CRAN probably with version 8.3.5 of Tcl/Tk).


 1.7...:
 =======

 2005-07-25: "initialize" methods for dg.VertexList, dg.EdgeList, ...
             but not returnFactorVerticesAndEdges and setBlocks.

 2005-07-02: new-functions replaced by "initialize" methods.
