@@ -2,14 +2,14 @@ Title: dynamicGraph
 Package: dynamicGraph
 Namespace: dynamicGraph
 Description: Interactive graphical tool for manipulating graphs
-Version: 0.2.2.5
-Date: 2009/04/03
+Version: 0.2.2.6
+Date: 2010/01/30
 Author: Jens Henrik Badsberg <coco@badsberg.eu>
 Maintainer: Jens Henrik Badsberg <coco@badsberg.eu>
 Depends: R (>= 1.8.1), methods, ggm, tcltk
 License: GPL (>= 2)
 URL: http://www.badsberg.eu
 Address: Andreas Bjorns Gade 21, 2. tv, 1428 Kobenhavn K, Denmark
-Packaged: Fri Apr 3 23:25:55 2009; Jens Henrik Badsberg
+Packaged: 2010-01-31 13:29:31 UTC; Jens Henrik Badsberg
 Repository: CRAN
-Date/Publication: 2009-04-04 20:40:28
+Date/Publication: 2010-02-01 19:26:39
